--- a/project/index.html
+++ b/project/index.html
@@ -23,8 +23,8 @@
 		 <div>
 		   <ul>
 		   <a href="#home" id="link"><li>HOME</li>
-		   <a href="#gallery" id="link"><li>GALLERY</li>
-		   <a href="#contact" id="link"><li>RESERVATION</li>
+		   <a href="#gallery"><li>GALLERY</li>
+		   <a href="#contact"><li>RESERVATION</li>
 		   </ul>
 		  </div>
 		 </div>
@@ -196,4 +196,4 @@
 		   
           
 		
-</body>
+
