put closing tab  for nav link and make footer

--- a/One_Page_Website/One_Page_Website.html
+++ b/One_Page_Website/One_Page_Website.html
@@ -9,9 +9,12 @@
 		 <div>
 		   <ul>
 		   <nav>
+		    <footer>
+			<p> Author: Sanjeeta Thapa<br>
 		   <a href="#home" id="link"><li>HOME</li>
-		   <a href="#gallery" id="link"><li>GALLERY</li>
-		   <a href="#contact" id="link"><li>RESERVATION</li>
+		   <a href="#gallery"><li>GALLERY</li>
+		   <a href="#contact"><li>RESERVATION</li>
+		   </footer>
 		   </nav>
 		   </ul>
 		  </div>
@@ -65,8 +68,8 @@
 			</p>
 			<div>
 			<form action="" method="post">
-			<input class="rsvp" type="text" value="First Nmae">
-			<input class="rsvp" type="text" value="Last Nmae">
+			<input class="rsvp" type="text" value="First namee">
+			<input class="rsvp" type="text" value="Last name">
 			<input class="rsvp" type="text" value="Email Address">
 			<input class="rsvp" type="text" value="Phone Number">
 			<div class="form-spacer">
@@ -83,11 +86,11 @@
 			    </section>
 				<!-- END RSVP -->
 				
-				<!--END footer-->
+			
 				
 				<div>
 				 www.thespacestation.space &nbsp;|&nbsp; &copy; 2016
 				 </div>
-				 <!--END FOOTER -->
+			
 				 </body>
 				 </html>
