put closing tags in nav

--- a/project/index.html
+++ b/project/index.html
@@ -22,9 +22,9 @@
 		 <div>
 		 <div>
 		   <ul>
-		   <a href="#home" id="link"><li>HOME</li>
-		   <a href="#gallery"><li>GALLERY</li>
-		   <a href="#contact"><li>RESERVATION</li>
+		   <a href="#home" id="link"><li>HOME</li> </a>
+		   <a href="#gallery"><li>GALLERY</li> </a>
+		   <a href="#contact"><li>RESERVATION</li> </a>
 		   </ul>
 		  </div>
 		 </div>
