put close </a> tags

--- a/One_Page_Website/One_Page_Website.html
+++ b/One_Page_Website/One_Page_Website.html
@@ -3,7 +3,7 @@
 <head>
     <title>one_Page_Website </title>
 	<meta charset="utf-8">
-	<!--<em> This text is emphasized </em> -->
+	
 </head>
  <div>
 		 <div>
@@ -11,9 +11,9 @@
 		   <nav>
 		    <footer>
 			<p> Author: Sanjeeta Thapa<br>
-		   <a href="#home" id="link"><li>HOME</li>
-		   <a href="#gallery"><li>GALLERY</li>
-		   <a href="#contact"><li>RESERVATION</li>
+		   <a href="#home" id="link"><li>HOME</li> </a>
+		   <a href="#gallery"><li>GALLERY</li>  </a>
+		   <a href="#contact"><li>RESERVATION</li> </a>
 		   </footer>
 		   </nav>
 		   </ul>
@@ -28,7 +28,7 @@
 		  </div>
 		 </div>
 		 </div>
-		<!-->END HOMR --> 
+		<!-->END HOME --> 
 		
 		 <!--GALLERY-->
           <section>
@@ -86,11 +86,6 @@
 			    </section>
 				<!-- END RSVP -->
 				
-			
-				
-				<div>
-				 www.thespacestation.space &nbsp;|&nbsp; &copy; 2016
-				 </div>
 			
 				 </body>
 				 </html>
