footer tag put the bottom

--- a/One_Page_Website/One_Page_Website.html
+++ b/One_Page_Website/One_Page_Website.html
@@ -9,12 +9,10 @@
 		 <div>
 		   <ul>
 		   <nav>
-		    <footer>
-			<p> Author: Sanjeeta Thapa<br>
 		   <a href="#home" id="link"><li>HOME</li> </a>
 		   <a href="#gallery"><li>GALLERY</li>  </a>
 		   <a href="#contact"><li>RESERVATION</li> </a>
-		   </footer>
+		   
 		   </nav>
 		   </ul>
 		  </div>
@@ -85,7 +83,10 @@
 			   </div>
 			    </section>
 				<!-- END RSVP -->
-				
+				<footer>
+				<p> author: Sanjeeta Thapa <br>
+				<a href = "sanjeetadthapa@gmail.com"> Email</a></p>
+				 </footer>
 			
 				 </body>
 				 </html>
