Added another paragraph.

--- a/BasicHTML.html
+++ b/BasicHTML.html
@@ -10,5 +10,7 @@
 		   <h4> Basic HTML Template</h4>
 		   </header>
 		   <p>Introduction to basic HTML system.</p>
+		   <p> Added another paragraph</p>
 		   </body>
+
 		   </html>
