creating basic and rollover html and css files

--- a/project/basic_css_demo_1.html
+++ b/project/basic_css_demo_1.html
@@ -3,7 +3,7 @@
     <head>
         <mete charset="utf-8"></mete>
         <title> Basic HTML Templete </title>
-        <link rel="stylesheet" href="./CSS/Basic_CSS_Demo.css">
+        <link rel="stylesheet" href="./CSS/basic_style.css">
     </head>
     <body>
         <div>
