--- a/project/css_menu_rollover.html
+++ b/project/css_menu_rollover.html
@@ -2,7 +2,7 @@
 <html lang="en>">
     <head>
         <title> CSS Drop-down Menu Demo</title>
-        <link rel="stylesheet" href="./CSS/css_menu_rollover.css">
+        <link rel="stylesheet" href="./CSS/menu_rollover.css">
     </head>
     <body>
         <div class="wrap">
