change file name

--- a/project1/basic.html
+++ b/project1/basic.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>The Space Station | Resort</title>
-        <link rel="stylesheet" href="">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="./CSS/shared.css">
+        <link rel="stylesheet" href="./CSS/animation.css">
 
     </head>
     <Body>
@@ -42,7 +42,7 @@
                    <!--Photo-Container 1-->
                    <div class="Photo-Container">
                        <div class="photo">
-                           img src="./images/thumb/thumbnail_1.png" alt="">
+                           <img src="./images/thumb/thumbnail_1.png" alt="">
                            <div class="photo-overlay">
                                <h3> Click to Enlarge</h3>
                                <p> We have several space luncch departing daily, book your flight today</p>
@@ -54,7 +54,7 @@
                  <!--Photo-Container 2-->
                  <div class="Photo-Container">
                     <div class="photo">
-                        img src="./images/thumb/thumbnail_1.png" alt="">
+                        <img src="./images/thumb/thumbnail_2.png" alt="">
                         <div class="photo-overlay">
                             <h3> Click to Enlarge</h3>
                             <p> We have several space luncch departing daily, book your flight today</p>
@@ -66,7 +66,7 @@
               <!--Photo-Container 3-->
               <div class="Photo-Container">
                 <div class="photo">
-                    img src="./images/thumb/thumbnail_1.png" alt="">
+                   <img src="./images/thumb/thumbnail_3.png" alt="">
                     <div class="photo-overlay">
                         <h3> Click to Enlarge</h3>
                         <p> We have several space luncch departing daily, book your flight today</p>
@@ -78,7 +78,7 @@
           <!--Photo-Container 4-->
           <div class="Photo-Container">
             <div class="photo">
-                img src="./images/thumb/thumbnail_1.png" alt="">
+                <img src="./images/thumb/thumbnail_4.png" alt="">
                 <div class="photo-overlay">
                     <h3> Click to Enlarge</h3>
                     <p> We have several space luncch departing daily, book your flight today</p>
@@ -90,7 +90,7 @@
       <!--Photo-Container 5-->
       <div class="Photo-Container">
         <div class="photo">
-            img src="./images/thumb/thumbnail_1.png" alt="">
+            <img src="./images/thumb/thumbnail_5.png" alt="">
             <div class="photo-overlay">
                 <h3> Click to Enlarge</h3>
                 <p> We have several space luncch departing daily, book your flight today</p>
@@ -103,7 +103,7 @@
   <!--Photo-Container 6-->
   <div class="Photo-Container">
     <div class="photo">
-        img src="./images/thumb/thumbnail_1.png" alt="">
+        <img src="./images/thumb/thumbnail_6.png" alt="">
         <div class="photo-overlay">
             <h3> Click to Enlarge</h3>
             <p> We have several space luncch departing daily, book your flight today</p>
@@ -114,7 +114,7 @@
  <!--Photo-Container 7-->
  <div class="Photo-Container">
     <div class="photo">
-        img src="./images/thumb/thumbnail_1.png" alt="">
+        <img src="./images/thumb/thumbnail_7.png" alt="">
         <div class="photo-overlay">
             <h3> Click to Enlarge</h3>
             <p> We have several space luncch departing daily, book your flight today</p>
@@ -126,7 +126,7 @@
  <!--Photo-Container 8-->
  <div class="Photo-Container">
     <div class="photo">
-        img src="./images/thumb/thumbnail_1.png" alt="">
+        <img src="./images/thumb/thumbnail_8.png" alt="">
         <div class="photo-overlay">
             <h3> Click to Enlarge</h3>
             <p> We have several space luncch departing daily, book your flight today</p>
@@ -138,7 +138,7 @@
  <!--Photo-Container 9-->
  <div class="Photo-Container">
     <div class="photo">
-        img src="./images/thumb/thumbnail_1.png" alt="">
+        <img src="./images/thumb/thumbnail_9.png" alt="">
         <div class="photo-overlay">
             <h3> Click to Enlarge</h3>
             <p> We have several space luncch departing daily, book your flight today</p>
@@ -156,6 +156,35 @@
 
        <!--RSVP-->
        <section id="contact">
+           <div id="container">
+               <div class="heading-pading">
+                   <h1 class="heading-pading">Reservation</h1>
+                   <div class="reservation">
+                       <h2><span>Your adventure is just around the moon</span>
+                      </br> Reserve your flight today!
+                    </h2>
+                    <p class="rsvp-text">
+                      Please provide us with the basic contact information.
+                    </p>
+                    <div class="form-rsvp">
+                        <form action="" method="post">
+                            <input class="rsvp" type="text" value="" placeholder="First Name">
+                            <input class="rsvp" type="text" value="" placeholder="Last Name">
+                            <input class="rsvp" type="text" value="" placeholder="Email Address">
+                            <input class="rsvp" type="text" value="" placeholder="Phone Number">
+                            <div class="form-spacer">
+                                <label class="Terms"> Terms and Condition</label>
+                            </div>
+                            <div class="submit">
+                                <input type="submit" value="Submit"
+
+                            </div>
+                        </form>
+
+                    </div>
+                   </div>
+               </div>
+           </div>
 
        </section>
 
@@ -163,6 +192,7 @@
 
        <!--Footer-->
        <div id="footer">
+           www.thespacestation.space &npsb;|&npsb; &copy; 2017
 
        </div>
        <!--End Footer-->
