change html and css

--- a/project1/basic.html
+++ b/project1/basic.html
@@ -24,8 +24,8 @@
        <!--Home-->
        <div id="home">
            <div class="container">
-               <div class="text-container">
-                   <span class="head-main">The Space Station</span>
+               <div class="text-center">
+                   <span class="head-main">The Planets</span>
                </div>
            </div>
 
@@ -156,9 +156,9 @@
 
        <!--RSVP-->
        <section id="contact">
-           <div id="container">
-               <div class="heading-pading">
-                   <h1 class="heading-pading">Reservation</h1>
+           <div class="container">
+               <div class="heading-padding">
+                   <h1 class="heading-padding">Reservation</h1>
                    <div class="reservation">
                        <h2><span>Your adventure is just around the moon</span>
                       </br> Reserve your flight today!
@@ -192,7 +192,7 @@
 
        <!--Footer-->
        <div id="footer">
-           www.thespacestation.space &npsb;|&npsb; &copy; 2017
+           www.thespacestation.space &nbsp;|&nbsp; &copy; 2017
 
        </div>
        <!--End Footer-->
