create one page website.css file

--- a/One_Page_Website/One_Page_Website.html
+++ b/One_Page_Website/One_Page_Website.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>one_Page_Website </title>
 	<meta charset="utf-8">
+    <title>one_Page_Website </title>
+	<link rel="stylesheet" href="./CSS/one_page_website.css">
+	
 	
 </head>
  <div>
