--- a/One_Page_Website/One_Page_Website.html
+++ b/One_Page_Website/One_Page_Website.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
     <title>one_Page_Website </title>
 	<link rel="stylesheet" href="./CSS/one_page_website.css">
+	<script src="JS/one_page_website.js" defer></script>
 	
 	
 </head>
